Fix T42326 trim operator not cancelled by the escape key.