source/blender/editors/space_sequencer/sequencer_edit.c
@@ -1508,6 +1508,8 @@ static int sequencer_trim_modal(bContext *C, wmOperator *op, const wmEvent *even
 			WM_event_add_notifier(C, NC_SCENE | ND_SEQUENCER, scene);
 			return OPERATOR_FINISHED;
 		}
+
+		case ESCKEY:
 		case RIGHTMOUSE:
 		{
 			int i;
